Fixing the FfmTerminal to run on JDK 22 and on Linux. (#945)
* Fixing the FffmTerminal to run on JDK 22 and on Linux.
* Ensuring control characters are not re-written inadvertedly.
* Update terminal-ffm/src/main/java/org/jline/terminal/impl/ffm/FfmTerminalProvider.java

Co-authored-by: ExE Boss <3889017+ExE-Boss@users.noreply.github.com>
Co-authored-by: Guillaume Nodet <gnodet@gmail.com>